[project]
name = "doorstep"
version = "0.1.0"
description = "Venue playlist builder for Spotify"
authors = [
    {name = "Hannah Lyons",email = "jlyons@lexile.com"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "spotipy (>=2.23.0)",
    "python-dotenv (>=1.0.0)"
]


[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
